update google login flow
